--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div clas="container">
-    <div class="jumbotron text-center" style="background:url(https://images.alphacoders.com/453/453091.jpg); background-size: 100%; height: 100%;")>
+    <div class="jumbotron text-center" style="background-size: 100%; height: 100%;")>
           <h1>Mission to Mars</h1>
            <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
            <hr class = "my-4">
@@ -25,8 +25,8 @@
     <div class="row">
       <div class="col-md-12">
         <h1>Latest Mars News</h1>
-        <h4>{{ mars.news_title }}</h4>
-        <p>{{ mars.title_text }}</p>
+        <h4>{{mars.news_title}}</h4>
+        <p>{{mars.title_text}}</p>
       </div>
     </div>
   </div>
@@ -36,14 +36,14 @@
   <div class="row padding">
     <div class="col-md-8">
     <h3> Mars Featured Image</h3>
-    <img src="{{ mars.featured_image_url }}" class="img-fluid" style="max-width:100%; max-height: auto;">
+    <img src="{{mars.featured_image_url}}" class="img-thumbnail" style="max-width:100%; max-height: auto;">
     </div>
   </div>
 </div>
 <div class="container padding">
         <div class="row padding">
           <div class="col-md-4">
-          <h3> Mars Parameter Descriptions</h3>
+          <h3> Mars Parameters</h3>
           <table border = "1", class = "dataframe">
               <thead>    
                   <tr style="text-align: right;">      
