--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div clas="container">
-    <div class="jumbotron text-center" style="background-size: 100%; height: 100%;")>
+    <div class="jumbotron text-center" style="background-size: 100%; height: 100%; background-image: url('https://asc-csa.gc.ca/images/astronomie/mars/mars-2020-cratere-ban.jpg')">
           <h1>Mission to Mars</h1>
            <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
            <hr class = "my-4">
@@ -38,11 +38,7 @@
     <h3> Mars Featured Image</h3>
     <img src="{{mars.featured_image_url}}" class="img-thumbnail" style="max-width:100%; max-height: auto;">
     </div>
-  </div>
-</div>
-<div class="container padding">
-        <div class="row padding">
-          <div class="col-md-4">
+  <div class="col-md-4">
           <h3> Mars Parameters</h3>
           <table border = "1", class = "dataframe">
               <thead>    
@@ -95,7 +91,7 @@
                 </tbody>
             </table>
           </div>
-        </div>
+      </div>
 </div>
 
 
@@ -114,7 +110,7 @@
       <div class="card text-center">
         <img class="card-img-top" src="{{mars.image_url}}" style="max-width:100%; max-height: auto;">
         <div class="card-body">
-          <h4 class="card-title">{{mars.mars_hemisphere_image_urls}}</h4>
+          <h4 class="card-title">{{mars.image_title}}</h4>
         </div>
       </div>
     </div>
